--- a/helm/templates/configmap.yaml
+++ b/helm/templates/configmap.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "colorapp.fullname" . }}
+  name: {{ include "colorapp.configMapName" . }}
   labels:
     {{- include "colorapp.labels" . | nindent 4 }}
 data:
