--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: vsanjay/color-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1.0.1"
+  tag: "v1.0"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -61,16 +61,20 @@ ingress:
   #      - chart-example.local
 
 resources:
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
   # limits:
   #   cpu: 100m
   #   memory: 128Mi
   requests:
-    cpu: 250m
-    memory: 512Mi
+    cpu: 50m
+    memory: 50Mi
+
+livenessProbe:
+  failureThreshold: 2
+  initialDelaySeconds: 5
+  periodSeconds: 30
+  httpGet:
+    path: /
+    port: http
 
 autoscaling:
   enabled: false
@@ -84,3 +88,7 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+externalSecrets:
+  secretsManagerStoreName: "aws-secretsmanager"
+  dbSecretName: "dpip/bpm/db"
