--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -29,6 +29,8 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
+          # command: ["/bin/sleep"]
+          # args: ["36000"]
           env:
           - name: DB_USERNAME
             valueFrom:
