--- a/helm/templates/externalsecrets.yaml
+++ b/helm/templates/externalsecrets.yaml
@@ -1,14 +1,14 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: db-secret
+  name: {{ include "colorapp.fullname" . }}-db-secret
 spec:
   refreshInterval: 1m
   secretStoreRef:
     name: {{ .Values.externalSecrets.secretsManagerStoreName }}
     kind: ClusterSecretStore
   target:
-    name: db-secret
+    name: {{ include "colorapp.fullname" . }}-db-secret
     creationPolicy: Owner
   data:
   - secretKey: DB_USERNAME
