--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -35,22 +35,22 @@ spec:
           - name: DB_USERNAME
             valueFrom:
               secretKeyRef:
-                name: db-secret
+                name: {{ include "colorapp.fullname" . }}-db-secret
                 key: DB_USERNAME
           - name: DB_PASSWORD
             valueFrom:
               secretKeyRef:
-                name: db-secret
+                name: {{ include "colorapp.fullname" . }}-db-secret
                 key: DB_PASSWORD
           - name: DB_ENDPOINT
             valueFrom:
               secretKeyRef:
-                name: db-secret
+                name: {{ include "colorapp.fullname" . }}-db-secret
                 key: DB_ENDPOINT
           - name: DB_PORT
             valueFrom:
               secretKeyRef:
-                name: db-secret
+                name: {{ include "colorapp.fullname" . }}-db-secret
                 key: DB_PORT
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
